# graph-document-oriented-framework

./: Cargo (copy).toml  Cargo.toml  README.md
color_app/: Cargo.toml
engine/: Cargo.toml
engine/src/: lib.rs  readme.md
engine/src/core/command/: readme.md  transaction.rs
engine/src/core/graph/: index.rs  mod.rs  queries.rs  readme.md  traversal.rs  validation.rs
engine/src/core/history/: macro.rs  mod.rs  snapshot.rs  stack.rs
engine/src/core/node/: metadata.rs  mod.rs  node.rs  properties.rs  readme.md
engine/src/core/relation/: mod.rs  presets.rs
engine/src/core/scheduler/: dirty_propagation.rs  mod.rs  queue.rs
engine/src/core/system/: mod.rs  registry.rs
engine/src/io/: mod.rs
engine/src/io/persistence/: deserializer (copy).rs  deserializer.rs  migrator.rs  mod.rs  readme.md  serializer (copy).rs  serializer.rs
engine/src/io/rpc/: command_router.rs  query_router.rs  server.rs
engine/src/plugin/api/: context.rs
engine/src/plugin/manager/: dependencies.rs  mod.rs
engine/src/plugin/permissions/: policy.rs
engine/src/scripting/: mod.rs  readme.md
engine/src/scripting/parser/: mod.rs  readme.md
engine/src/scripting/runtime/: compiler.rs
engine/tests/: phase1_data_model.rs  phase2_commands_signals.rs  phase3_scheduler_systems.rs  phase7_web_ui.rs  phase8_performance_stress.rs
example_app/: Cargo.toml
example_app/src/: commands.rs  document.rs  lib.rs
example_app/src/ui/: color_picker.rs  mod.rs
gdf_app/: Cargo.toml
headless_ui/: Cargo.toml
src/: lib.rs  wasm_api.rs
src/core/: mod.rs  (+1 more)
tests/: phase4_scripting_plugins.rs  phase5_persistence_api.rs  phase6_headless_ui.rs
web/: app.js  index.html
web_bridge/: Cargo.toml
web_color_app/: app.js  index.html
web_example_app/: app.js
web_wgpu_app/: app.js  index.html
wgpu_app/: Cargo.toml
wgpu_app/src/: _wasm.rs  commands.rs  document.rs  lib.rs
wgpu_app/src/_renderer/: camera.rs  mesh.rs  mod.rs  shaders.rs
wgpu_app/src/_renderer/shaders/: grid.wgsl  mesh.wgsl
wgpu_app/src/ui/: mod.rs  viewport_3d.rs
(+138 files in other folders)
