[package]
name = "graph_document_framework"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "1.10", features = ["v4", "serde", "js"] } # 'js' feature for WASM random
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] } # 'wasmbind' for browser time
rmp-serde = "1.3"
wasm-bindgen = "0.2"