[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
#uuid = { version = "1.10", features = ["v4", "serde", "js"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#chrono = { version = "0.4", features = ["serde", "wasmbind"] }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.3"
# Remove wasm-bindgen from here