[package]
name = "example_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../engine" }
headless_ui = { path = "../headless_ui" }
web_bridge = { path = "../web_bridge" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde", "js"] }
console_error_panic_hook = "0.1.7"